Completed the alignment of the added 'output' containers, however the text overflow needs to be fixed and handled.

--- a/styler.css
+++ b/styler.css
@@ -32,8 +32,8 @@ body {
     align-items: center;
     flex-direction: column; 
     width: 280px;
-    height: 400px;
-    gap: 9px;
+    height: 450px;
+    gap: 25px;
     border-radius: 12px;
     box-shadow: 5px 5px 12px rgba(0,0,0,0.5);
     
@@ -44,16 +44,34 @@ body {
     background-color:darkgray;
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: whitesmoke;
-    font-size: x-large;
+    font-size: large;
     margin: 10px;
     border-radius: 12px;
-    height: 50px;
+    height: 75px;
     width: 235px;
     padding: 5px;
     display: flex;
     justify-content: right;
-    align-items: center;
+    align-items: flex-end;
+    flex-direction: column;
+    
+    
+    
 }
+
+
+.userInputBox {
+    
+    word-break: break-all;
+
+}
+
+.resultBox {
+
+
+
+}
+
 
 
 #equalsButton {
